sdk/v0.5.28/tablemetadata.mdx
---
title: "TableMetadata"
icon: "square-c"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/catalog/table_metadata.py#L65\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>class</span>&nbsp; pixeltable.TableMetadata


Metadata for a Pixeltable table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; base

```
base: str | None
```

If this table is a view or snapshot, the full path of its base table; otherwise `None`.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; columns

```
columns: dict[str, ColumnMetadata]
```

Column metadata for all of the visible columns of the table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; comment

```
comment: str | None
```

User-provided table comment, if one exists.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; custom_metadata

```
custom_metadata: Any
```

User-defined JSON metadata for this table, if any.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; id

```
id: uuid.UUID
```

The stable UUID of the table. Useful for detecting drop-and-recreate across time.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; indices

```
indices: dict[str, IndexMetadata]
```

Index metadata for all of the indices of the table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; is_replica

```
is_replica: bool
```

`True` if this table is a replica of another (shared) table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; is_snapshot

```
is_snapshot: bool
```

`True` if this table is a snapshot.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; is_view

```
is_view: bool
```

`True` if this table is a view.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; iterator_call

```
iterator_call: str | None
```

The iterator call for views that use an iterator; otherwise `None`.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; kind

```
kind: Literal['table', 'view', 'snapshot', 'replica']
```

The kind of table: `'table'`, `'view'`, `'snapshot'`, or `'replica'`.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; media_validation

```
media_validation: Literal['on_read', 'on_write']
```

The media validation policy for this table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; name

```
name: str
```

The name of the table (ex: `'my_table'`).

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; path

```
path: str
```

The full path of the table (ex: `'my_dir.my_subdir.my_table'`).

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; primary_key

```
primary_key: list[str] | None
```

List of primary key column names, or `None` if this table has no primary key.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; schema_version

```
schema_version: int
```

The current schema version of the table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; version

```
version: int
```

The current version of the table.

## <span style={{ 'color': 'gray' }}>attr</span>&nbsp; version_created

```
version_created: datetime.datetime
```

The timestamp when this table version was created.

